# expert-mesh

./: .gitignore  Dockerfile  README.md  aggregator.py  build_dataset.py  config.yaml  docker-compose.gpu.yml  docker-compose.yml  expert_backend.py  http_client.py  http_server.py  logging_utils.py  metrics.py  mise.toml  node.py  protocol.py  pyproject.toml  router.py  run_experiment.py
.claude/research/: backlog.md  config.yml  journal.md  journal_archive.md  state.json
docs/: encounter_expert_mesh_design.md
mise-tasks/: analyze  clean  deploy  setup  start
tests/: test_aggregator.py  test_build_dataset.py  test_http_server.py  test_logging_utils.py  test_metrics.py  test_node.py  test_protocol.py  test_router.py  test_run_experiment.py  test_show_logs.py
tools/: healthcheck.py  list_peers.py  node_models.py  remote_dir.py  show_logs.py
